# FacialKeypointsDetection

./: 2. Define the Network Architecture.ipynb  3. Facial Keypoint Detection, Complete Pipeline.ipynb  4. Fun with Keypoints.ipynb  README.md  data_load.py  models.py  requirements.txt  setup.cfg  train.py
.ipynb_checkpoints/: 2. Define the Network Architecture-checkpoint.ipynb
facial_keypoints_detection/: data.py  models.py  train.py
notebooks/: 1. Load and Visualize Data.ipynb  2. Define the Network Architecture.ipynb  3. Facial Keypoint Detection, Complete Pipeline.ipynb  4. Fun with Keypoints.ipynb
