[metadata]
name = facial_keypoints_detection
version = 0.0.1
description = Facial keypoint detection package using CNN

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts = 
    facial_run_trainer = facial_keypoints_detection.train:main

[options.packages.find]
where = .
include =
    facial_keypoint_detection
